Correct hierachy of h tags on legal and add additional spacing between sections

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -236,3 +236,7 @@ textarea {
 footer span {
     padding-left: 1rem;
 }
+
+.legal p {
+    margin-bottom: 2rem;
+}
